Fixed overlapping, header. Rather simple fix.

--- a/carbon0/static/css/style.css
+++ b/carbon0/static/css/style.css
@@ -88,7 +88,7 @@ a.mission-link:hover {
 
     h1 {
       font-size: 35px;
-      line-height: 24px;
+      line-height: 30px;
     }
 
     
